--- a/src/output.css
+++ b/src/output.css
@@ -554,12 +554,34 @@ video {
   --tw-contain-style:  ;
 }
 
+.card {
+  display: grid;
+  height: 10rem;
+  width: 10rem;
+  place-content: center;
+  border-radius: 0.5rem;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(220 38 38 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .relative {
   position: relative;
 }
 
 .m-0 {
   margin: 0px;
+}
+
+.m-10 {
+  margin: 2.5rem;
 }
 
 .m-8 {
@@ -600,6 +622,10 @@ video {
   margin-left: 1.5rem;
 }
 
+.mt-0 {
+  margin-top: 0px;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -632,6 +658,10 @@ video {
   height: 4rem;
 }
 
+.h-\[600px\] {
+  height: 600px;
+}
+
 .h-screen {
   height: 100vh;
 }
@@ -660,6 +690,10 @@ video {
   width: 100%;
 }
 
+.grow {
+  flex-grow: 1;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -668,12 +702,24 @@ video {
   list-style-type: decimal;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.place-content-center {
+  place-content: center;
+}
+
 .items-center {
   align-items: center;
 }
 
 .justify-center {
   justify-content: center;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .rounded-full {
@@ -1084,6 +1130,10 @@ video {
 }
 
 @media (min-width: 340px) {
+  .smartphone\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
   .smartphone\:w-60 {
     width: 15rem;
   }
@@ -1095,6 +1145,10 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:h-\[300px\] {
+    height: 300px;
+  }
+
   .sm\:w-72 {
     width: 18rem;
   }
@@ -1115,8 +1169,8 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:w-100 {
-    width: 400px;
+  .md\:w-125 {
+    width: 500px;
   }
 
   .md\:w-96 {
@@ -1135,12 +1189,16 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:h-\[150px\] {
+    height: 150px;
+  }
+
   .lg\:w-100 {
     width: 400px;
   }
 
-  .lg\:w-125 {
-    width: 500px;
+  .lg\:w-150 {
+    width: 600px;
   }
 
   .lg\:bg-slate-600 {
