--- a/src/output.css
+++ b/src/output.css
@@ -598,6 +598,16 @@ video {
   margin-bottom: 2rem;
 }
 
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.mx-9 {
+  margin-left: 2.25rem;
+  margin-right: 2.25rem;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -614,16 +624,20 @@ video {
   margin-bottom: 1.25rem;
 }
 
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
 .ml-2 {
   margin-left: 0.5rem;
 }
 
+.ml-3 {
+  margin-left: 0.75rem;
+}
+
 .ml-6 {
   margin-left: 1.5rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
 }
 
 .mt-0 {
@@ -646,8 +660,32 @@ video {
   margin-top: 1rem;
 }
 
-.ml-3 {
-  margin-left: 0.75rem;
+.ml-16 {
+  margin-left: 4rem;
+}
+
+.ml-10 {
+  margin-left: 2.5rem;
+}
+
+.ml-125 {
+  margin-left: 500px;
+}
+
+.ml-9 {
+  margin-left: 2.25rem;
+}
+
+.ml-50 {
+  margin-left: 200px;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
+.ml-20 {
+  margin-left: 5rem;
 }
 
 .block {
@@ -714,8 +752,8 @@ video {
   width: 100%;
 }
 
-.w-80 {
-  width: 20rem;
+.w-150 {
+  width: 600px;
 }
 
 .grow {
@@ -730,16 +768,20 @@ video {
   list-style-type: decimal;
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
 .flex-wrap {
   flex-wrap: wrap;
 }
 
 .place-content-center {
   place-content: center;
-}
-
-.items-start {
-  align-items: flex-start;
 }
 
 .items-center {
@@ -754,12 +796,8 @@ video {
   gap: 1rem;
 }
 
-.self-start {
-  align-self: flex-start;
-}
-
-.justify-self-start {
-  justify-self: start;
+.self-end {
+  align-self: flex-end;
 }
 
 .rounded-full {
@@ -880,6 +918,10 @@ video {
 
 .bg-center {
   background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
 }
 
 .p-0 {
