--- a/src/output.css
+++ b/src/output.css
@@ -598,16 +598,6 @@ video {
   margin-bottom: 2rem;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
-.mx-9 {
-  margin-left: 2.25rem;
-  margin-right: 2.25rem;
-}
-
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -648,44 +638,12 @@ video {
   margin-top: 2.5rem;
 }
 
-.mt-16 {
-  margin-top: 4rem;
-}
-
 .mt-20 {
   margin-top: 5rem;
 }
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.ml-16 {
-  margin-left: 4rem;
-}
-
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
-.ml-125 {
-  margin-left: 500px;
-}
-
-.ml-9 {
-  margin-left: 2.25rem;
-}
-
-.ml-50 {
-  margin-left: 200px;
-}
-
-.ml-5 {
-  margin-left: 1.25rem;
-}
-
-.ml-20 {
-  margin-left: 5rem;
 }
 
 .block {
@@ -752,8 +710,8 @@ video {
   width: 100%;
 }
 
-.w-150 {
-  width: 600px;
+.w-60 {
+  width: 15rem;
 }
 
 .grow {
@@ -766,10 +724,6 @@ video {
 
 .list-decimal {
   list-style-type: decimal;
-}
-
-.flex-row {
-  flex-direction: row;
 }
 
 .flex-col {
@@ -794,10 +748,6 @@ video {
 
 .gap-4 {
   gap: 1rem;
-}
-
-.self-end {
-  align-self: flex-end;
 }
 
 .rounded-full {
